# Athena

./: .gitlab-ci.yml  README.md  main.py  package-lock.json  pyproject.toml  resta.py
admin/: .gitignore  README.md  main.py  pyproject.toml
admin/src/core/: __init__.py  api_validations.py  auth_decorators.py  bcrypt.py  database.py  flags.py  permissions_service.py  review_service.py  seeds.py  tag_service.py  user_service.py
admin/src/core/models/: __init__.py  etiqueta.py  favorites.py  feature_flags.py  images.py  modification_history.py  public_user.py  review.py  role_permission.py  site.py  site_tags  site_tags.py  sitios.py  tag.py  user.py  users.py
admin/src/web/: __init__.py  config.py  storage.py  user_validations.py
admin/src/web/api/: api.py  login.py  minio.py  review_management.py  sites_provinces.py
admin/src/web/controllers/: __init__.py  admin_routes.py  auth.py  favorites_routes.py  feature_flags.py  feature_flags_routes.py  public_user_routes.py  resenas.py  review_routes.py  sites_routes.py  sitios_historicos.py  tag.py  tag_routes.py  user_routes.py  users.py
admin/src/web/handlers/: auth.py  maintenance.py  mod_history.py
admin/src/web/templates/: base.html  base_layout.html  create_user.html  dashboard.html  edit_site.html  edit_user.html  error_401.html  error_404.html  error_500.html  error_test.html  feature_flags.html  form.html  home.html  index.html  layout.html  list.html  lista_sitios.html  login.html  maintenance_admin.html  (+11 more)
admin/static/: style.css
admin/static/css/: style.css
admin/tests/: test.py  test_backend.py
(+38 files in other folders)
